CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(googleurl CXX)

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake" "${CMAKE_MODULE_PATH}")

SET(BIN_OUTPUT_DIR ${googleurl_BINARY_DIR}/bin)
SET(LIB_OUTPUT_DIR ${googleurl_BINARY_DIR}/lib)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BIN_OUTPUT_DIR})
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${BIN_OUTPUT_DIR})
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${LIB_OUTPUT_DIR})

SET(SRC_BASE ${CMAKE_CURRENT_SOURCE_DIR})
SET(HEADERS_LOC ${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${HEADERS_LOC})

IF (MSVC)
    ADD_DEFINITIONS(-DUNICODE -D_UNICODE)
ENDIF()

ADD_SUBDIRECTORY(base)
ADD_SUBDIRECTORY(src)
